--- a/users/templates/users/base.html
+++ b/users/templates/users/base.html
@@ -1,4 +1,5 @@
 {% load sidebar_tags %}
+{% load staticfiles %}
 <html lang="en"><head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -12,22 +13,6 @@
   <!-- Bootstrap core CSS -->
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 
-  <style>
-    .bd-placeholder-img {
-      font-size: 1.125rem;
-      text-anchor: middle;
-      -webkit-user-select: none;
-      -moz-user-select: none;
-      -ms-user-select: none;
-      user-select: none;
-    }
-
-    @media (min-width: 768px) {
-      .bd-placeholder-img-lg {
-        font-size: 3.5rem;
-      }
-    }
-  </style>
 </head>
 <body class="bg-dark">
   <header class="fixed-top">
@@ -66,7 +51,7 @@
     </header>
 
     <main role="main">
-      <section class="jumbotron text-center">
+      <section class="jumbotron text-center bg-transparent text-white">
         <div class="container">
           <h1 class="jumbotron-heading">Welcome</h1>
           {% if user.is_authenticated %}
@@ -98,9 +83,9 @@
                 <table class="table table-dark">
                   <thead>
                     <tr>
-                      <th scope="col">Leave Type</th>
-                      <th scope="col">Leave Start Date</th>
-                      <th scope="col">Leave End Date:</th>
+                      <th style="white-space: nowrap;" scope="col">Leave Type</th>
+                      <th style="white-space: nowrap;" scope="col">Leave Start Date</th>
+                      <th style="white-space: nowrap;" scope="col">Leave End Date:</th>
                     </tr>
                   </thead>
                   <tbody>
@@ -120,9 +105,9 @@
                   <table class="table table-dark">
                     <thead>
                       <tr>
-                        <th scope="col">Leave Type</th>
-                        <th scope="col">Leave Start Date</th>
-                        <th scope="col">Leave End Date:</th>
+                        <th style="white-space: nowrap;" scope="col">Leave Type</th>
+                        <th style="white-space: nowrap;" scope="col">Leave Start Date</th>
+                        <th style="white-space: nowrap;" scope="col">Leave End Date:</th>
                       </tr>
                     </thead>
                     <tbody>
@@ -142,9 +127,9 @@
                     <table class="table table-dark">
                       <thead>
                         <tr>
-                          <th scope="col">Leave Type</th>
-                          <th scope="col">Leave Start Date</th>
-                          <th scope="col">Leave End Date:</th>
+                          <th style="white-space: nowrap;" scope="col">Leave Type</th>
+                          <th style="white-space: nowrap;" scope="col">Leave Start Date</th>
+                          <th style="white-space: nowrap;" scope="col">Leave End Date:</th>
                         </tr>
                       </thead>
                       <tbody>
@@ -178,4 +163,6 @@
       <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
       <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
       <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
-    </body></html>
+    </body>
+    </script>
+    </html>
