--- a/users/templates/users/home.html
+++ b/users/templates/users/home.html
@@ -14,7 +14,7 @@
     <br>
     <a href="{% url 'update_info' %}" class="btn btn-large active btn-primary my-2">Update Profile</a>
   {% else %}
-    <h1>Welcome to the world of Excelence!</h1>
+    <h1>Here add Unniversity history and Achievements!!!</h1>
   {% endif %}
 
 </div>
