--- a/users/templates/users/admin/sidebar.html
+++ b/users/templates/users/admin/sidebar.html
@@ -1,9 +1,9 @@
-<div class="bg-light border-right" id="sidebar-wrapper">
+<div class="bg-transparent " id="sidebar-wrapper">
   <a href="{% url 'create_user' %}" class="btn btn-large btn-primary my-2 align-middle">Create New User</a>
   <div class="align-middle sidebar-heading"><h3>User List</h3></div>
   <div class="list-group list-group-flush">
     {% for this_user in users %}
-        <a href="javascript:{document.getElementById('user_sel{{this_user.id}}').submit()}" class="list-group-item list-group-item-action bg-light">{{ this_user.full_name }}</a>
+        <a href="javascript:{document.getElementById('user_sel{{this_user.id}}').submit()}" class="list-group-item list-group-item-action bg-dark text-white">{{ this_user.full_name }}</a>
 
         <form id='user_sel{{this_user.id}}' method="post" action="{% url 'user_detail' this_user.id %}">
           {% csrf_token %}
