--- a/users/templates/users/login.html
+++ b/users/templates/users/login.html
@@ -2,7 +2,8 @@
 {% load static %}
 
 
-{% block middle %}
+{% block anonymouss %}
+
 	<div class="modal-dialog modal-login">
 		<div class="modal-content">
 			<div class="modal-header">
