--- a/templates/base.html
+++ b/templates/base.html
@@ -152,7 +152,7 @@
             {% block middle %}
             {% endblock %}
           </div>
-          <div class="container align-content-center bd-transparent">
+          <div class="container bd-transparent">
             {% else %}
               {% block anonymouss %}
               {% endblock %}
@@ -162,11 +162,16 @@
 
       </main>
 
-      <footer class="text-muted">
-        <div class="container text-center">
-          <p>©S M Shaheduzzaman(Shajal) {% now 'Y'%}</p>
+      <footer class="page-footer font-small blue text-muted">
+        <!-- Copyright -->
+        <div class="footer-copyright text-center py-3">© {% now 'Y'%} Copyright:S M Shaheduzzaman(Shajal)
+          <a href="{% url 'about' %}" class="btn btn-dark">About Us</a>
+          <a href="{% url 'help' %}" class="btn btn-dark active">Help</a>
         </div>
+        <!-- Copyright -->
+
       </footer>
+
       <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
       <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
       <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
